@@ -264,6 +264,7 @@ token S_YANKCOL
 %token K_IGNORECASE
 %token K_NOIGNORECASE
 %token K_TM_GMTOFF
+%token K_MAPPING_TIMEOUT
 %token K_NEWLINE_ACTION
 %token K_SHOW_CURSOR
 %token K_NOSHOW_CURSOR
@@ -1202,6 +1203,13 @@ setitem :
 
     |    K_NEWLINE_ACTION '=' NUMBER {
                                      if ($3 == 0) parse_str(user_conf_d, "newline_action=0", TRUE); }
+    |    K_MAPPING_TIMEOUT        {               parse_str(user_conf_d, "mapping_timeout=1500", TRUE); }
+    |    K_MAPPING_TIMEOUT '=' num   {
+                                     char * s = scxmalloc((unsigned) BUFFERSIZE);
+                                     sprintf(s, "mapping_timeout=%d", (int) $3);
+                                     parse_str(user_conf_d, s, TRUE);
+                                     scxfree(s);
+                                     }
     |    K_TM_GMTOFF              {               parse_str(user_conf_d, "tm_gmtoff=-10800", TRUE); }
     |    K_TM_GMTOFF '=' num      {
                                      char * s = scxmalloc((unsigned) BUFFERSIZE);
